<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">qplayer</string>
    <string name="build_type">Release</string>

    <!-- Player -->

    <!-- Browser -->

    <string name="Current">Current</string>
    <string name="Filebrowser">Filebrowser</string>

    <string name="Playlists">Playlists</string>

    <string name="playlist_browser_back">  Back to Playlists</string>
    <string name="playlist_browser_add_playlist">  New Playlist</string>

    
    <!-- Dialogs -->

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_rename">Rename</string>
    <string name="dialog_remove">Remove</string>

    <string name="dialog_must_enter_name">You must enter a name !</string>

    <string name="edit_playlist_dialog_tag">edit_playlist_dialog_tag</string>
    <string name="edit_playlist_dialog_title">Edit this playlist: </string>
    <string name="edit_playlist_dialog_delete">Delete this playlist</string>
    <string name="edit_playlist_dialog_rename">Rename this playlist</string>
    <string name="edit_playlist_dialog_enter">Enter a new name for the playlist:</string>

    <string name="new_playlist_dialog_tag">new_playlist_dialog_tag</string>
    <string name="new_playlist_dialog_title">Create a new playlist: </string>
    <string name="new_playlist_dialog_enter">Enter a name for the new playlist:</string>
    
    <string name="edit_track_dialog_tag">edit_track_dialog_tag</string>
    <string name="edit_track_dialog_title">Delete this track ? </string>
    <string name="edit_track_dialog_delete">Remove track from playlist</string>

    <string name="add_track_to_playlist_dialog_tag">add_track_to_playlist_dialog_tag</string>
    <string name="add_track_to_playlist_dialog_title">Add this track to a playlist ?</string>

    <string name="choose_laylist_dialog_tag">choose_laylist_dialog_tag</string>
    <string name="choose_playlist_dialog_title">Choose a playlist or create a new one</string>
    <string name="choose_playlist_dialog_add">Enter a name for new playlist:</string>
    <string name="choose_playlist_dialog_add_hint">playlist</string>



</resources>
